--- a/index.html
+++ b/index.html
@@ -74,66 +74,14 @@
     <div class="bg-gray-900/70 border border-blue-500 shadow-xl p-8 rounded-2xl w-full max-w-md animate__animated animate__fadeIn">
       <h1 class="text-4xl font-extrabold text-center mb-8 text-blue-400 tracking-wide">⚡ Menu Utama ⚡</h1>
       <div class="grid grid-cols-1 gap-4">
-        <div class="btn-menu" onclick="showPage('xterclose-page')">🐞 BUG MENU</div>
-        <div class="btn-menu" onclick="showPage('produk-page')">🛒 Produk</div>
-        <div class="btn-menu" onclick="showPage('trackip-page')">Track Ip</div>
-        <div class="btn-menu" onclick="showPage('fitur-page')">⚙️ Fitur</div>
+        <div class="btn-menu" onclick="showPage('xterclose-page')">〽️ BUG MENU</div>
+        <div class="btn-menu" onclick="showPage('trackip-page')">🤖Track Ip</div>
         <div class="btn-menu" onclick="logout()">🔓 Logout</div>
       </div>
     </div>
     <footer>By © RYZZIDEV</footer>
   </div>
 
-  <!-- PRODUK -->
-  <div id="produk-page" class="hidden page min-h-screen flex flex-col items-center justify-center px-6 py-10">
-    <h1 class="text-4xl font-bold text-center mb-6 text-blue-400">📦 RYZZI SHOP〽️</h1>
-    <div class="grid md:grid-cols-3 gap-10 max-w-6xl w-full">
-      <!-- Basic -->
-      <div class="pricing-card">
-        <h2 class="plan-title">APK INFFINTY ATTACK V2<br>1 BULAN</h2>
-        <p class="price">Rp 20.000</p>
-        <ul class="features mt-6 text-blue-100 text-sm">
-          <li>𝗘𝗙𝗘𝗖𝗧 𝗕𝗨𝗚:</li>
-          <li>CRASH ANDROID { Stuck Logo + Blank }</li>
-          <li>DELAY MARKER</li>
-          <li>CRASH IOS</li>
-        </ul>
-        <button class="btn-custom mt-4 w-full" onclick="showFitur( 'APK INFFINTY ATTACK V2', [' DDOS layer 4','bisa buat ddos Server,Web,Wifi)','🦠Bug WhatsApp ( IOS,DELAY,ANDRO)','🦠Chat menu (Bisa chat antar member)','🦠Parse Nik ( Mengambil informasi lewat nik)'])">FITUR</button>
-        <button class="btn-custom mt-2 w-full" onclick="showKelebihan('APK INFFINTY ATTACK V2', ['tanpa sender ( tanpa nomor² telepon untuk di jadikan pengiriman bug )','👾bisa spam sepuasnya','👾 bug sepuasnya no sender','👾Login langsung bug work 100 no gimick','👾memiliki security username & password','👾anti ribet, download > login > masukan nomor target > bug > selesai😈'])">KELEBIHANNYA</button>
-        <a href="https://t.me/RyzziOffcial" target="_blank" class="btn-custom mt-4 block">BELI SEKARANG</a>
-      </div>
-      <!-- Reseller -->
-      <div class="pricing-card">
-        <h2 class="plan-title">APK INFFINTY ATTACK V2<br>Permanen</h2>
-        <p class="price">Rp 55.000</p>
-        <ul class="features mt-6 text-blue-100 text-sm">
-          <li>𝗘𝗙𝗘𝗖𝗧 𝗕𝗨𝗚:</li>
-          <li>CRASH ANDROID { Stuck Logo + Blank }</li>
-          <li>DELAY MARKER</li>
-          <li>CRASH IOS</li>
-        </ul>
-        <button class="btn-custom mt-4 w-full" onclick="showFitur( 'APK INFFINTY ATTACK V2', [' DDOS layer 4','bisa buat ddos Server,Web,Wifi)','🦠Bug WhatsApp ( IOS,DELAY,ANDRO)','🦠Chat menu (Bisa chat antar member)','🦠Parse Nik ( Mengambil informasi lewat nik)'])">FITUR</button>
-        <button class="btn-custom mt-2 w-full" onclick="showKelebihan('APK INFFINTY ATTACK V2', ['tanpa sender ( tanpa nomor² telepon untuk di jadikan pengiriman bug )','👾bisa spam sepuasnya','👾 bug sepuasnya no sender','👾Login langsung bug work 100 no gimick','👾memiliki security username & password','👾anti ribet, download > login > masukan nomor target > bug > selesai😈'])">KELEBIHANNYA</button>
-        <a href="https://t.me/RyzziOffcial" target="_blank" class="btn-custom mt-4 block">BELI SEKARANG</a>
-      </div>
-      <!-- Admin -->
-      <div class="pricing-card">
-        <h2 class="plan-title">PAKET PANEL PRIVATE</h2>
-        <p class="price">Rp 1.000 - 12.000</p>
-        <ul class="features mt-6 text-blue-100 text-sm">
-          <li> 📦 1GB : 1K | 📦 2GB : 2K </li>
-          <li> 📦 3GB : 3K | 📦 4GB : 4K </li>
-          <li> 📦 5GB : 5K | 📦 6GB : 6K </li>
-          <li> 📦 7GB : 7K | 📦 8GB : 8K </li>
-          <li> 📦 9GB : 9K | 📦 10GB : 10K </li>
-                 <li> UNLI : 3K PROMO -3 </li>
-        </ul>
-        <button class="btn-custom mt-2 w-full" onclick="showKeunggulan('BENEFIT NYA', ['MASIH FRESH YGY','SERVER TERAWAT','NO DELL DELL','NO INTIP','BERGARANSI 3 HARI'])">BENEFIT</button>
-        <a href="https://t.me/RyzziOffcial" target="_blank" class="btn-custom mt-4 block">BELI SEKARANG</a>
-      </div>
-    </div>
-    <div class="mt-6"><div class="btn-custom" onclick="showPage('menu-page')">⬅️ Kembali</div></div>
-  </div>
 
   <!-- BUG MENU -->
   <div id="xterclose-page" class="hidden page min-h-screen flex flex-col items-center justify-center px-6">
@@ -161,16 +109,6 @@
     </div>
   </div>
 
-<!-- FITUR: Upload Gambar ke Catbox -->
-<div id="fitur-page" class="hidden page min-h-screen flex items-center justify-center px-6">
-  <div class="bg-gray-900/70 border border-blue-500 shadow-xl p-8 rounded-2xl w-full max-w-md text-center">
-    <h1 class="text-3xl font-bold mb-6 text-blue-400">⚙️ Upload Gambar</h1>
-
-<label for="fileInput" class="cursor-pointer px-6 py-3 rounded-xl bg-blue-600 hover:bg-blue-700 shadow-md transition text-white font-semibold">
-  📤 Upload Gambar
-</label>
-<input type="file" id="fileInput" class="hidden" accept="image/*" onchange="uploadToServer(event)">
-<div id="uploadResult" class="mt-4 text-blue-300 text-sm text-center"></div>
 
 <script>
 async function uploadToServer(event) {
